--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "bundle/nerdcommenter"]
 	path = bundle/nerdcommenter
 	url = https://github.com/scrooloose/nerdcommenter.git
+[submodule "bundle/vimfootnotes"]
+	path = bundle/vimfootnotes
+	url = https://github.com/vim-scripts/VimFootnotes.git
