--- a/.gitmodules
+++ b/.gitmodules
@@ -1,30 +1,30 @@
 [submodule "bundle/fugitive"]
-	path = bundle/fugitive
+	path = .vim/bundle/fugitive
 	url = http://github.com/tpope/vim-fugitive.git
 [submodule "bundle/nerdcommenter"]
-	path = bundle/nerdcommenter
+	path = .vim/bundle/nerdcommenter
 	url = https://github.com/scrooloose/nerdcommenter.git
 [submodule "bundle/vimfootnotes"]
-	path = bundle/vimfootnotes
+	path = .vim/bundle/vimfootnotes
 	url = https://github.com/vim-scripts/VimFootnotes.git
 [submodule "bundle/vim-orgmode"]
-	path = bundle/vim-orgmode
+	path = .vim/bundle/vim-orgmode
 	url = git://github.com/jceb/vim-orgmode.git
 [submodule "bundle/easymotion"]
-	path = bundle/easymotion
+	path = .vim/bundle/easymotion
 	url = https://github.com/Lokaltog/vim-easymotion.git
 [submodule "bundle/molokai"]
-	path = bundle/molokai
+	path = .vim/bundle/molokai
 	url = https://github.com/tomasr/molokai.git
 [submodule "bundle/solarized"]
-	path = bundle/solarized
+	path = .vim/bundle/solarized
 	url = https://github.com/altercation/vim-colors-solarized.git
 [submodule "bundle/candycode"]
-	path = bundle/candycode
+	path = .vim/bundle/candycode
 	url = https://github.com/vim-scripts/candycode.vim.git
 [submodule "bundle/asciidoc"]
-	path = bundle/asciidoc
+	path = .vim/bundle/asciidoc
 	url = https://github.com/vim-scripts/asciidoc.vim.git
 [submodule "bundle/vimroom"]
-	path = bundle/vimroom
+	path = .vim/bundle/vimroom
 	url = https://github.com/mikewest/vimroom.git
